[project]
name = "garden-blog"
version = "0.1.0"
authors = [
    {name = "Helen Dobruk", email = "elena.dobruk@yandex.ru"},
]
description = "A personal blog about gardening"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.7",
    "python-dotenv>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.2",
]
